--- a/README.org
+++ b/README.org
@@ -20,7 +20,7 @@ versions of these models. As such, it may be possible to develop a dataset of pr
 * Current Notes
 ** What is Domain Knowledge?
 
-I think the word "knowledge" has a lot of epistemic baggage that we may be able to ignore entirely in our working definition - due to the fact that models are not situated and therefore do not possess knowledge graphs of possible worlds. We can conceptualize the model's If we say that Domain Knowledge, in an agent-agnostic sense, consists of a combination of information and the ability to apply that information - to recognize when particular features of a problem are salient, how to perform methodologies which lead to outcomes, etc. - then I believe we can define domain knowledge (DK) in the context of "dumb" LLMs as the set of relations from a given domain (domain here being some volume in the parameter space of the model). The relations may ultimately land outside of the domain: for instance, domain knowledge in mathematics applied to physics. The important part of the definition lies in the delineation of the set of transformations starting at the domain, because mapping back to this set of transformations is how we seek to define hallucinations. 
+I think the word "knowledge" has a lot of epistemic baggage that we may be able to ignore entirely in our working definition - due to the fact that models are not situated and therefore do not possess knowledge graphs of possible worlds. If we say that Domain Knowledge, in an agent-agnostic sense, consists of a combination of information and the ability to apply that information - to recognize when particular features of a problem are salient, how to perform methodologies which lead to outcomes, etc. - then I believe we can define domain knowledge (DK) in the context of "dumb" LLMs as the set of relations from a given domain (domain here being some volume in the parameter space of the model). The relations may ultimately land outside of the domain: for instance, domain knowledge in mathematics applied to physics. The important part of the definition lies in the delineation of the set of transformations starting at the domain, because mapping back to this set of transformations is how we seek to define hallucinations. 
 
 ** What are Hallucinations?
 
