--- a/lit-review/lit-review.org
+++ b/lit-review/lit-review.org
@@ -1,6 +1,18 @@
 #+title: Lit Review
 #+author: Dean Cahill
 
+* Sources gathered via:
+@misc{MinerviniAHD2014,
+  author = {Pasquale Minervini and others},
+  title = {awesome-hallucination-detection},
+  year = {2014},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/EdinburghNLP/awesome-hallucination-detection}}
+}
+
+
+
 * HaluEval: A Large-Scale Hallucination Evaluation Benchmark
 ** Citation
 @misc{li2023halueval,
@@ -25,6 +37,43 @@
 
 [[.images/halueval.png]]
 [[.images/halueval2.png]]
+* Natural Questions: A Benchmark for QA Research
+** Citation`
+@article{kwiatkowski-etal-2019-natural,
+    title = "Natural Questions: A Benchmark for Question Answering Research",
+    author = "Kwiatkowski, Tom  and
+      Palomaki, Jennimaria  and
+      Redfield, Olivia  and
+      Collins, Michael  and
+      Parikh, Ankur  and
+      Alberti, Chris  and
+      Epstein, Danielle  and
+      Polosukhin, Illia  and
+      Devlin, Jacob  and
+      Lee, Kenton  and
+      Toutanova, Kristina  and
+      Jones, Llion  and
+      Kelcey, Matthew  and
+      Chang, Ming-Wei  and
+      Dai, Andrew M.  and
+      Uszkoreit, Jakob  and
+      Le, Quoc  and
+      Petrov, Slav",
+    editor = "Lee, Lillian  and
+      Johnson, Mark  and
+      Roark, Brian  and
+      Nenkova, Ani",
+    journal = "Transactions of the Association for Computational Linguistics",
+    volume = "7",
+    year = "2019",
+    address = "Cambridge, MA",
+    publisher = "MIT Press",
+    url = "https://aclanthology.org/Q19-1026",
+    doi = "10.1162/tacl_a_00276",
+    pages = "452--466",
+    abstract = "We present the Natural Questions corpus, a question answering data set. Questions consist of real anonymized, aggregated queries issued to the Google search engine. An annotator is presented with a question along with a Wikipedia page from the top 5 search results, and annotates a long answer (typically a paragraph) and a short answer (one or more entities) if present on the page, or marks null if no long/short answer is present. The public release consists of 307,373 training examples with single annotations; 7,830 examples with 5-way annotations for development data; and a further 7,842 examples with 5-way annotated sequestered as test data. We present experiments validating quality of the data. We also describe analysis of 25-way annotations on 302 examples, giving insights into human variability on the annotation task. We introduce robust metrics for the purposes of evaluating question answering systems; demonstrate high human upper bounds on these metrics; and establish baseline results using competitive methods drawn from related literature.",
+}
+** TODO Summary
 
 * FactCHD
 ** Citation
@@ -103,13 +152,36 @@
       primaryClass={cs.CL}
 }
 ** TODO Summary
-* Just Ask for Calibration
+* Neural Path Hunter: Reducing Hallucination in Dialogue Systems via Path Grounding
+** Citation
+@misc{dziri2021neural,
+      title={Neural Path Hunter: Reducing Hallucination in Dialogue Systems via Path Grounding},
+      author={Nouha Dziri and Andrea Madotto and Osmar Zaiane and Avishek Joey Bose},
+      year={2021},
+      eprint={2104.08455},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+** TODO Summary
+
+* Just Ask for Calibration: Strategies for Eliciting Calibrated Confidence Scores from Language Models Fine-Tuned with Human Feedback
 ** Citation
 @misc{tian2023just,
       title={Just Ask for Calibration: Strategies for Eliciting Calibrated Confidence Scores from Language Models Fine-Tuned with Human Feedback},
       author={Katherine Tian and Eric Mitchell and Allan Zhou and Archit Sharma and Rafael Rafailov and Huaxiu Yao and Chelsea Finn and Christopher D. Manning},
       year={2023},
       eprint={2305.14975},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL}
+}
+** TODO Summary
+* Check Your Facts and Try Again: Improving LLM Models with External Knowledge and Automated Feedback
+** Citation
+@misc{peng2023check,
+      title={Check Your Facts and Try Again: Improving Large Language Models with External Knowledge and Automated Feedback},
+      author={Baolin Peng and Michel Galley and Pengcheng He and Hao Cheng and Yujia Xie and Yu Hu and Qiuyuan Huang and Lars Liden and Zhou Yu and Weizhu Chen and Jianfeng Gao},
+      year={2023},
+      eprint={2302.12813},
       archivePrefix={arXiv},
       primaryClass={cs.CL}
 }
